# aion

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PROGRESS.md  README.md
.claude/: settings.json
.claude/agents/: doc-checker.md  perf-profiler.md  security-reviewer.md  test-validator.md
.claude/commands/: check-docs.md  implement.md  progress.md  validate.md
.claude/skills/audit/: SKILL.md
.claude/skills/bench/: SKILL.md
.claude/skills/new-crate/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.github/workflows/: ci.yml
crates/aion_arch/: Cargo.toml
crates/aion_arch/src/: ids.rs  lib.rs  tech_map.rs  types.rs
crates/aion_arch/src/intel/: cyclone_iv.rs  cyclone_v.rs  mod.rs
crates/aion_arch/src/xilinx/: artix7.rs  mod.rs
crates/aion_bitstream/: Cargo.toml
crates/aion_bitstream/src/: config_bits.rs  crc.rs  lib.rs
crates/aion_bitstream/src/intel/: config_db.rs  mod.rs  pof.rs  rbf.rs  sof.rs
crates/aion_bitstream/src/xilinx/: bit.rs  config_db.rs  mod.rs
crates/aion_cache/: Cargo.toml
crates/aion_cache/src/: artifact.rs  cache.rs  error.rs  hasher.rs  lib.rs  manifest.rs
crates/aion_cli/: Cargo.toml
crates/aion_cli/src/: build.rs  init.rs  lint.rs  main.rs  pipeline.rs  sim.rs  test.rs  view.rs
crates/aion_common/: Cargo.toml
crates/aion_common/src/: frequency.rs  hash.rs  ident.rs  lib.rs  logic.rs  logic_vec.rs  result.rs
crates/aion_config/: Cargo.toml
crates/aion_config/src/: error.rs  lib.rs  loader.rs  resolve.rs  types.rs
crates/aion_conformance/: Cargo.toml
crates/aion_conformance/src/: lib.rs
crates/aion_conformance/tests/: error_recovery.rs  lint_detection.rs  project_integration.rs  real_designs.rs  sv_conformance.rs  verilog_conformance.rs  vhdl_conformance.rs
crates/aion_diagnostics/: Cargo.toml
crates/aion_diagnostics/src/: code.rs  diagnostic.rs  label.rs  lib.rs  renderer.rs  severity.rs  sink.rs  suggested_fix.rs
crates/aion_elaborate/: Cargo.toml
crates/aion_elaborate/src/: const_eval.rs  context.rs  errors.rs  expr.rs  lib.rs  registry.rs  stmt.rs  sv.rs  types.rs  verilog.rs  vhdl.rs
crates/aion_ir/: Cargo.toml
crates/aion_ir/src/: arena.rs  cell.rs  const_value.rs  design.rs  expr.rs  ids.rs  lib.rs  module.rs  port.rs  process.rs  signal.rs  source_map.rs  stmt.rs  types.rs
crates/aion_lint/: Cargo.toml
crates/aion_lint/src/: engine.rs  helpers.rs  lib.rs
crates/aion_lint/src/rules/: c201.rs  c202.rs  c203.rs  c204.rs  e102.rs  e104.rs  e105.rs  mod.rs  w101.rs  w102.rs  w103.rs  w104.rs  w105.rs  w106.rs  w107.rs  w108.rs
crates/aion_pnr/: Cargo.toml
crates/aion_pnr/src/: convert.rs  data.rs  ids.rs  lib.rs  route_tree.rs  timing_bridge.rs
crates/aion_pnr/src/placement/: anneal.rs  cost.rs  mod.rs  random.rs
crates/aion_pnr/src/routing/: astar.rs  congestion.rs  mod.rs  pathfinder.rs
crates/aion_sim/: Cargo.toml
crates/aion_sim/src/: error.rs  evaluator.rs  fst.rs  interactive.rs  kernel.rs  lib.rs  time.rs  value.rs  vcd_loader.rs  waveform.rs
crates/aion_source/: Cargo.toml
crates/aion_source/src/: file_id.rs  lib.rs  resolved_span.rs  source_db.rs  source_file.rs  span.rs
crates/aion_sv_parser/: Cargo.toml
crates/aion_sv_parser/src/: ast.rs  decl.rs  expr.rs  lexer.rs  lib.rs  parser.rs  stmt.rs  token.rs
crates/aion_synth/: Cargo.toml
crates/aion_synth/src/: const_prop.rs  cse.rs  dce.rs  lib.rs  lower.rs  lower_expr.rs  netlist.rs  optimize.rs  resource.rs  tech_map.rs
crates/aion_timing/: Cargo.toml
crates/aion_timing/src/: constraints.rs  graph.rs  ids.rs  lib.rs  report.rs  sdc.rs  sta.rs
crates/aion_tui/: Cargo.toml
crates/aion_tui/src/: app.rs  commands.rs  event.rs  lib.rs  render.rs  state.rs  terminal.rs  waveform_data.rs
crates/aion_tui/src/widgets/: command_input.rs  mod.rs  signal_list.rs  status_bar.rs  waveform.rs
crates/aion_verilog_parser/: Cargo.toml
crates/aion_verilog_parser/src/: ast.rs  decl.rs  expr.rs  lexer.rs  lib.rs  parser.rs  stmt.rs  token.rs
crates/aion_vhdl_parser/: Cargo.toml
crates/aion_vhdl_parser/src/: ast.rs  decl.rs  expr.rs  lexer.rs  lib.rs  parser.rs  stmt.rs  token.rs  types.rs
crates/aion_xray/: Cargo.toml
crates/aion_xray/src/: arch_impl.rs  config_db_impl.rs  db.rs  fasm.rs  lib.rs  segbits.rs  tile_type.rs  tilegrid.rs
docs/: aion-prd.md  aion-technical-spec.md
examples/blinky_soc/: aion.toml
examples/blinky_soc/src/: clk_divider.sv  counter.sv  led_ctrl.sv  top.sv
examples/blinky_soc/tests/: blinky_tb.sv
examples/blinky_vhdl/: aion.toml
examples/blinky_vhdl/src/: clk_divider.vhd  counter.vhd  led_ctrl.vhd  top.vhd
examples/blinky_vhdl/tests/: blinky_tb.vhd
