[package]
name = "aion_cache"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aion_common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
