[package]
name = "aion_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "aion"
path = "src/main.rs"

[dependencies]
aion_common = { workspace = true }
aion_source = { workspace = true }
aion_diagnostics = { workspace = true }
aion_config = { workspace = true }
aion_ir = { workspace = true }
aion_vhdl_parser = { workspace = true }
aion_verilog_parser = { workspace = true }
aion_sv_parser = { workspace = true }
aion_elaborate = { workspace = true }
aion_lint = { workspace = true }
aion_sim = { workspace = true }
aion_tui = { workspace = true }
aion_synth = { workspace = true }
aion_arch = { workspace = true }
aion_timing = { workspace = true }
aion_pnr = { workspace = true }
aion_bitstream = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
