[package]
name = "aion_conformance"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Conformance tests for the Aion FPGA toolchain parsers and pipeline"

[dependencies]
aion_common = { path = "../aion_common" }
aion_source = { path = "../aion_source" }
aion_diagnostics = { path = "../aion_diagnostics" }
aion_config = { path = "../aion_config" }
aion_ir = { path = "../aion_ir" }
aion_vhdl_parser = { path = "../aion_vhdl_parser" }
aion_verilog_parser = { path = "../aion_verilog_parser" }
aion_sv_parser = { path = "../aion_sv_parser" }
aion_elaborate = { path = "../aion_elaborate" }
aion_lint = { path = "../aion_lint" }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
