[package]
name = "aion_elaborate"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aion_common = { workspace = true }
aion_source = { workspace = true }
aion_diagnostics = { workspace = true }
aion_ir = { workspace = true }
aion_vhdl_parser = { workspace = true }
aion_verilog_parser = { workspace = true }
aion_sv_parser = { workspace = true }
