[package]
name = "aion_sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Event-driven HDL simulator for the Aion FPGA toolchain"

[dependencies]
aion_common = { workspace = true }
aion_ir = { workspace = true }
aion_source = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
