[package]
name = "aion_synth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Synthesis engine for the Aion FPGA toolchain — behavioral lowering, optimization, and technology mapping"

[dependencies]
aion_common = { workspace = true }
aion_source = { workspace = true }
aion_diagnostics = { workspace = true }
aion_config = { workspace = true }
aion_ir = { workspace = true }
aion_arch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
