[package]
name = "aion_xray"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aion_arch = { workspace = true }
aion_bitstream = { workspace = true }
aion_common = { workspace = true }
aion_diagnostics = { workspace = true }
aion_ir = { workspace = true }
aion_source = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
